# quadlet-tui

./: Cargo.toml  README.md
src/: app.rs  event.rs  main.rs  ui.rs
src/command_helpers/: journalctl.rs  mod.rs  systemctl.rs
src/quadlet/: manager.rs
src/quadlet/types/: basic_info.rs  container_info.rs  kind.rs  mod.rs  network_info.rs  pod_info.rs  state.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
src/tui/components/: mod.rs  popup.rs  quadlet_details_preview.rs  quadlet_list.rs  search_bar.rs
