[package]
name = "quadlet-tui"
version = "0.1.0"
license = "MIT"
edition = "2024"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.30.0"
tokio = { version = "1.52.3", features = ["full"] }
color-eyre = "0.6.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.44", features = ["serde"] }

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
